[metadata]
name = toshiba-estia
author = Rosen Nedyalkov
author_email = rosen@nedyalkov.name
description = Toshiba Estia controller - allows to control Toshiba HVAC systems with WiFi.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = toshiba, hvac, estia
license = Apache License 2.0
url = https://github.com/lordross/Toshiba-Estia-control
project_urls =
    Bug Tracker = https://github.com/lordross/Toshiba-Estia-control/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10
install_requires =
    azure-iot-device @ git+https://github.com/KaSroka/azure-iot-sdk-python@kasr/update_paho_mqtt
    aiohttp>=3.8.1

[versioneer]
VCS = git
style = pep440
versionfile_source = toshiba_estia/_version.py
versionfile_build =
tag_prefix = v
parentdir_prefix = toshiba-estia-
